--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "mongoose": "^8.4.1",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.4.1"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.2"
   }
 }
