--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^8.4.1"
+    "mongoose": "^8.4.1",
+    "node-cron": "^3.0.3",
+    "node-schedule": "^2.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.2"
