--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon ./src/index.js",
+    "clear_db_nor_last": "node ./scripts/clearDataExceptLast.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,11 +16,8 @@
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "cron": "^3.1.7",
     "express": "^4.19.2",
-    "express-async-handler": "^1.2.0",
     "mongoose": "^8.4.1",
-    "node-cron": "^3.0.3",
     "node-schedule": "^2.1.1"
   },
   "devDependencies": {
